// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`legends are created for current and previous data: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`legends are created for current and previous data: previous month data 1`] = `
Array [
  Object {
    "date": "12-15-17",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`reports are formatted to datums: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`reports are formatted to datums: previous month data 1`] = `
Array [
  Object {
    "date": "12-15-17",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
]
`;

exports[`trend is a daily value: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
  Object {
    "date": "1-16-18",
    "units": "unit",
    "x": 16,
    "y": 2,
  },
]
`;

exports[`trend is a running total: current month data 1`] = `
Array [
  Object {
    "date": "1-15-18",
    "units": "unit",
    "x": 15,
    "y": 1,
  },
  Object {
    "date": "1-16-18",
    "units": "unit",
    "x": 16,
    "y": 3,
  },
]
`;
